@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3634 utf-8
+personal_ws-1.1 en 3636 utf-8
 AAC
 AAS
 ABI
@@ -330,6 +330,7 @@ EE
 EEPROM
 EFI
 EG
+EINVAL
 EL
 ELCD
 EMI
@@ -352,6 +353,7 @@ ESS
 ESV
 ESXi
 ETIME
+ETIMEDOUT
 EUROCASE
 EVeRr
 EXtreme
