@@ -1692,13 +1692,26 @@ static int	voltronic_claim(void)
 	item_t	*item = find_nut_info("input.voltage", 0, 0);
 
 	/* Don't know what happened - should have looked up in the mapping table here! */
-	if (!item)
+	if (!item) {
+		upsdebug_with_errno(4, "%s: did not find 'input.voltage' in mapping table", __func__);
 		return 0;
+	}
 
 	/* No reply/Unable to get value */
 	if ((query_result = qx_process(item, NULL))) {
 		upsdebug_with_errno(4, "%s: failed (%d) to get 'input.voltage'", __func__, query_result);
-		return 0;
+
+		if (errno == ETIMEDOUT) {
+			upsdebugx(2, "%s: Sometimes the device is laggy, and we could have posted many queries and the buffer is full of replies to them (or it is still producing the answers); try to sleep, flush it and ask again", __func__);
+			usleep(5000000);	/* arbitrary 5s delay for the device to maybe produce answers to earlier voltage requests */
+			upsdebugx(2, "%s: Retry the query now, buffers will be flushed then", __func__);
+			query_result = qx_process(item, NULL);
+		}
+
+		if (query_result) {
+			/* Not a known timeout/zero-read initially, or still a bad response */
+			return 0;
+		}
 	}
 
 	/* Unable to process value */
@@ -1712,6 +1725,7 @@ static int	voltronic_claim(void)
 
 	/* Don't know what happened */
 	if (!item) {
+		upsdebug_with_errno(4, "%s: did not find 'ups.firmware.aux' in mapping table", __func__);
 		dstate_delinfo("input.voltage");
 		return 0;
 	}
@@ -1719,18 +1733,8 @@ static int	voltronic_claim(void)
 	/* No reply/Unable to get value */
 	if ((query_result = qx_process(item, NULL))) {
 		upsdebug_with_errno(4, "%s: failed (%d) to get 'ups.firmware.aux'", __func__, query_result);
-
-		/*if (errno == EINVAL) {*/
-			upsdebugx(2, "%s: Sometimes the device is laggy, and we could have posted many queries and the buffer is full of replies to them; try to flush it and ask again", __func__);
-			usleep(5000000);	/* arbitrary 5s delay for the device to maybe produce answers to earlier voltage requests */
-			upsdebugx(2, "%s: Buffers flushed, retry the query", __func__);
-			query_result = qx_process(item, NULL);
-		/*}*/
-
-		if (query_result) {
-			dstate_delinfo("input.voltage");
-			return 0;
-		}
+		dstate_delinfo("input.voltage");
+		return 0;
 	}
 
 	/* Unable to process value/Protocol out of range */
